# fastapi-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
docs/: API.md  DEPLOYMENT.md  SETUP.md
scripts/: migrate.sh  start-dev.sh  start.sh  test.sh
src/: main.py
src/api/v1/: __init__.py  api.py
src/api/v1/endpoints/: __init__.py  auth.py  health.py  items.py  users.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
src/db/: __init__.py  base.py  orm_models.py  session.py
src/dependencies/: __init__.py  auth.py  database.py  pagination.py
src/middleware/: __init__.py  cors.py  error_handler.py
src/models/: __init__.py  item.py  user.py
src/schemas/: __init__.py  common.py  item.py  token.py  user.py
src/services/: __init__.py  auth_service.py  item_service.py  user_service.py
tests/: __init__.py  conftest.py  test_main.py
